--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mezo Matsnet Drops - Transaction Visualizer</title>
-  <meta name="description" content="A physics visualizer for Mezo Matsnet"/>
-  <meta name="keywords" content="mezo, matsnet, blockchain, transaction, visualizer, drops, network, tps, volume, tx, crypto, simulation"/>
+  <title>Mezo Drops - Transaction Visualizer</title>
+  <meta name="description" content="A physics visualizer for Mezo mainnet. From Mallard Labs."/>
+  <meta name="keywords" content="mezo, mainnet, blockchain, transaction, visualizer, drops, network, tps, volume, tx, crypto, simulation"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Mezo Matsnet Drops" />
+  <meta name="apple-mobile-web-app-title" content="Mezo Drops" />
   <link rel="manifest" href="/site.webmanifest" />
 
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
@@ -20,21 +20,21 @@
   <meta http-equiv="pragma" content="no-cache">
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Mezo Matsnet Drops" />
-  <meta name="twitter:image" content="https://test-mezo.drops.mallardlabs.xyz/ogx.png" />
+  <meta name="twitter:title" content="Mezo Drops" />
+  <meta name="twitter:image" content="https://test-mezo.drops.mallardlabs.xyz/og.png" />
   <meta name="twitter:domain" content="Mallard Labs" />
   <meta name="twitter:site" content="@mallardlabs" />
   <meta name="twitter:creator" content="@mallardlabs" />
-  <meta name="twitter:description" content="A physics visualizer for Mezo Matsnet" />
-  <meta property="og:title" content="Mezo Matsnet Drops" />
-  <meta property="og:description" content="A physics visualizer for Mezo Matsnet" />
+  <meta name="twitter:description" content="A physics visualizer for Mezo mainnet. From Mallard Labs." />
+  <meta property="og:title" content="Mezo Drops" />
+  <meta property="og:description" content="A physics visualizer for Mezo mainnet. From Mallard Labs." />
   <meta property="og:image" content="https://test-mezo.drops.mallardlabs.xyz/og.png" />
   <meta property="og:url" content="https://test-mezo.drops.mallardlabs.xyz" />
 </head>
 <body>
   <div id="toggle-container"></div>
   <a id="about-link" href="index.html#" id="info-button">?</a>
-  <a id="github-link" href="https://github.com/MallardLabs/testnet-mezo-drops" target="_blank">
+  <a id="github-link" href="https://github.com/MallardLabs/mezo-drops" target="_blank">
     <svg id="github-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
     <style type="text/css">
@@ -58,7 +58,7 @@
         <!--<span class="address"><strong>Donation: ETH ADDRESS from old owner was here</strong></span><br/><br/>-->
         <h2>How does it work?</h2>
         <span class="explain">
-          Transactions are recorded live from the Mezo matsnet network using a public RPC.<br/>
+          Transactions are recorded live from the Mezo mainnet network using a public RPC.<br/>
           Ball size and color coresponds to the transaction amount.<br/>
           Click on the spheres to see the transaction details.<br/><br/>
           Mezo Red: 0 BTC<br/>
@@ -67,7 +67,7 @@
           Very light Mezo Red: 0.1 - 10 BTC<br/>
           Near white Mezo Red: > 10 BTC<br/><br/>
           Forked from <a href="https://github.com/paintoshi/sonic-drops" target="_blank" rel="noopener noreferrer">Paintoshi's Sonic Drops</a><br/><br/>
-        <p class="address"><a href="https://github.com/MallardLabs/testnet-mezo-drops" target="_blank">Github Source</a></p><br/>
+        <p class="address"><a href="https://github.com/MallardLabs/mezo-drops" target="_blank">Github Source</a></p><br/>
       </span>
         <p><a href="#" id="close-button">CLOSE</a></p>
           </div>
