--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 </head>
 <body>
   <div id="toggle-container"></div>
-  <a id="about-link" href="index.html#" id="info-button">?</a>
-  <a id="github-link" href="https://github.com/MallardLabs/mezo-drops" target="_blank">
+  <!--<a id="github-link" href="https://github.com/MallardLabs/mezo-drops" target="_blank">
     <svg id="github-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
     <style type="text/css">
@@ -50,7 +49,8 @@
         C512,114.7,397.3,0,256.2,0C114.7,0,0,114.7,0,256.2C0,397.3,114.7,512,256.2,512C397.3,512,512,397.3,512,256.2L512,256.2z"/>
     </g>
     </svg>
-  </a>
+  </a>-->
+  <a id="about-link" href="index.html#" id="info-button">?</a>
   <div id="info" class="hidden">
     <div id="content">
         <div id="content-background">
@@ -58,7 +58,7 @@
         <!--<span class="address"><strong>Donation: ETH ADDRESS from old owner was here</strong></span><br/><br/>-->
         <h2>How does it work?</h2>
         <span class="explain">
-          Transactions are recorded live from the Mezo mainnet network using a public RPC.<br/>
+          Blocks are recorded live from the Mezo mainnet network using a public RPC.<br/>
           Ball size and color coresponds to the transaction amount.<br/>
           Click on the spheres to see the transaction details.<br/><br/>
           Mezo Red: 0 BTC<br/>
