reverted to show txs with new public rpc

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Mezo Drops" />
-  <meta name="twitter:image" content="https://test-mezo.drops.mallardlabs.xyz/og.png" />
+  <meta name="twitter:image" content="https://mezo.drops.mallardlabs.xyz/og.png" />
   <meta name="twitter:domain" content="Mallard Labs" />
   <meta name="twitter:site" content="@mallardlabs" />
   <meta name="twitter:creator" content="@mallardlabs" />
   <meta name="twitter:description" content="A physics visualizer for Mezo mainnet. From Mallard Labs." />
   <meta property="og:title" content="Mezo Drops" />
   <meta property="og:description" content="A physics visualizer for Mezo mainnet. From Mallard Labs." />
-  <meta property="og:image" content="https://test-mezo.drops.mallardlabs.xyz/og.png" />
-  <meta property="og:url" content="https://test-mezo.drops.mallardlabs.xyz" />
+  <meta property="og:image" content="https://mezo.drops.mallardlabs.xyz/og.png" />
+  <meta property="og:url" content="https://mezo.drops.mallardlabs.xyz" />
 </head>
 <body>
   <div id="toggle-container"></div>
@@ -54,7 +54,7 @@
   <div id="info" class="hidden">
     <div id="content">
         <div id="content-background">
-        <h1>Superposition Drops</h1><br />
+        <h1>Mezo Drops</h1><br />
         <!--<span class="address"><strong>Donation: ETH ADDRESS from old owner was here</strong></span><br/><br/>-->
         <h2>How does it work?</h2>
         <span class="explain">
